--- a/ecommerce website/css/admin_style.css
+++ b/ecommerce website/css/admin_style.css
@@ -459,10 +459,10 @@ section {
 .orders .box-container .box {
   padding: 2rem;
   padding-top: 1rem;
-  border-radius: 0.5rem;
-  border: var(--border);
+  border-radius: 1rem;
+  /* border: var(--border); */
   background-color: var(--white);
-  box-shadow: var(--box-shadow);
+  box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.1);
 }
 
 .orders .box-container .box p {
@@ -498,9 +498,9 @@ section {
 .accounts .box-container .box {
   padding: 2rem;
   padding-top: 0.5rem;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   text-align: center;
-  border: var(--border);
+  /* border: var(--border); */
   background-color: var(--white);
   box-shadow: var(--box-shadow);
 }
