--- a/ecommerce website/css/admin_style.css
+++ b/ecommerce website/css/admin_style.css
@@ -58,11 +58,13 @@ section {
 
 .heading {
   font-size: 4rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Noto Sans", sans-serif;
   color: var(--black);
   font-weight: bolder;
   margin-bottom: 2rem;
   text-align: left;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 .btn,
@@ -160,11 +162,11 @@ section {
 .form-container form {
   padding: 2rem;
   text-align: center;
+  border-radius: 1rem;
   box-shadow: var(--box-shadow);
   background-color: var(--white);
-  border-radius: 0.5rem;
   width: 50rem;
-  border: var(--border);
+  /* border: var(--border); */
 }
 
 .form-container form h3 {
@@ -313,8 +315,8 @@ section {
   margin: 0 auto;
   background-color: var(--white);
   box-shadow: var(--box-shadow);
-  border: var(--border);
-  border-radius: 0.5rem;
+  /* border: var(--border); */
+  border-radius: 1rem;
   padding: 2rem;
 }
 
@@ -526,8 +528,8 @@ section {
 .contacts .box-container .box {
   padding: 2rem;
   padding-top: 1rem;
-  border-radius: 0.5rem;
-  border: var(--border);
+  border-radius: 1rem;
+  /* border: var(--border); */
   background-color: var(--white);
   box-shadow: var(--box-shadow);
 }
