--- a/ecommerce website/css/admin_style.css
+++ b/ecommerce website/css/admin_style.css
@@ -327,12 +327,18 @@ section {
 }
 
 .add-products form .flex .inputBox {
-  font-size: 2rem;
   flex: 1 1 25rem;
+}
+
+.add-products form .flex .inputBox-large {
+  flex: 1 1 50rem;
 }
 
 .add-products form .flex .detailBox {
   flex: 1 1 50rem;
+  font-weight: bold;
+  margin-bottom: 1.5vh;
+  margin-top: 1.5vh;
 }
 
 .add-products form span {
