--- a/ecommerce website/css/style.css
+++ b/ecommerce website/css/style.css
@@ -232,7 +232,7 @@ section {
 }
 
 .home-bg {
-  background: url(../images/1stone.jpg) no-repeat;
+  background: url(../images/6thone.jpeg) no-repeat;
   background-size: cover;
   background-position: center;
 }
